// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WebApp/> render with default/required props 1`] = `
<section
  className="webapp "
/>
`;

exports[`<WebApp/> render with optional props [::className] as "{{className}}" 1`] = `
<section
  className="webapp {{className}}"
/>
`;
